chore(core): fix typing on cache measurement helper + remove overflow styles from scrollable node

--- a/packages/simplebar-core/src/simplebar.css
+++ b/packages/simplebar-core/src/simplebar.css
@@ -49,7 +49,6 @@
 
 .simplebar-track {
   z-index: 1;
-  position: absolute;
   right: 0;
   bottom: 0;
   pointer-events: none;
